--- a/src/main/resources/templates/book/add.html
+++ b/src/main/resources/templates/book/add.html
@@ -2,42 +2,43 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <th:block th:replace="~{layout :: link-css}"></th:block>
+    <th:block th:replace="layout :: link-css"></th:block>
     <title>Add Book</title>
 </head>
 <body>
-<th:block th:replace="~{layout :: header}"></th:block>
+<th:block th:replace="layout :: header"></th:block>
 <div class="container">
     <h1>Add Book</h1>
-    <form th:action="@{/books/save}" th:object="${book}" method="post">
+    <form th:action="@{/books/add}" th:object="${book}" method="post">
         <div class="col-6 mb-3">
-            <label class="form-label" for="title">Title:</label><span class="text-danger">*</span>
-            <input class="form-control" required type="text" th:field="*{title}" id="title">
+            <label for="title" class="form-label">Title: </label>
+            <input type="text" class="form-control" th:field="*{title}" id="title">
             <span class="text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
         </div>
         <div class="col-6 mb-3">
-            <label class="form-label" for="author">Author:</label>
-            <input class="form-control" type="text" th:field="*{author}" id="author">
+            <label for="author" class="form-label">Author:</label>
+            <input type="text" class="form-control" th:field="*{author}" id="author">
         </div>
         <div class="col-6 mb-3">
-            <label class="form-label" for="price">Price:</label><span class="text-danger">*</span>
-            <input class="form-control" required type="text" th:field="*{price}" id="price">
+            <label for="price" class="form-label">Price: </label>
+            <input type="text" class="form-control" th:field="*{price}" id="price">
             <span class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
         </div>
         <div class="col-6 mb-3">
-            <label class="form-label" for="category">Category:</label><span class="text-danger">*</span>
-            <select class="form-control" id="category" name="category.id">
+            <label for="category" class="form-label">Category:</label>
+            <select name="category.id" id="category" class="form-control">
                 <option value="">-- Select Category --</option>
-                <option th:each="category : ${categories}" th:value="${category.id}"
+                <option th:each="category : ${categories}"  th:value="${category.id}"
                         th:text="${category.name}"></option>
             </select>
             <span class="text-danger" th:if="${#fields.hasErrors('category')}" th:errors="*{category}"></span>
+
         </div>
         <input type="submit" class="btn btn-primary" value="Save">
     </form>
     <br>
-    <a th:href="@{/books}">Back to List</a>
+    <a th:href="@{/books}">Back to List Book</a>
 </div>
-<th:block th:replace="~{layout :: footer}"></th:block>
+<th:block  th:replace="layout :: footer"></th:block>
 </body>
 </html>
