--- a/src/main/resources/templates/book/edit.html
+++ b/src/main/resources/templates/book/edit.html
@@ -2,33 +2,33 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <th:block th:replace="~{layout :: link-css}"></th:block>
+    <th:block th:replace="layout :: link-css"></th:block>
     <title>Edit Book</title>
 </head>
-
 <body>
-<th:block th:replace="~{layout :: header}"></th:block>
+<th:block th:replace="layout :: header"></th:block>
 <div class="container">
     <h1>Edit Book</h1>
-    <form th:action="@{/books/save}" th:object="${book}" method="post">
-        <input type="hidden" th:field="*{id}">
+    <form th:action="@{/books/edit}" th:object="${book}" method="post">
         <div class="col-6 mb-3">
-            <label class="form-label" for="title">Title:</label>
-            <input class="form-control" required type="text" th:field="*{title}" id="title" th:value="${book.title}">
+            <label for="title" class="form-label">Title: </label>
+            <input type="text" class="form-control" th:field="*{title}" id="title">
+            <span class="text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
         </div>
         <div class="col-6 mb-3">
-            <label class="form-label" for="author">Author:</label>
-            <input class="form-control" type="text" th:field="*{author}" id="author" th:value="${book.author}">
+            <label for="author" class="form-label">Author:</label>
+            <input type="text" class="form-control" th:field="*{author}" id="author">
         </div>
         <div class="col-6 mb-3">
-            <label class="form-label" for="price">Price:</label>
-            <input class="form-control" required type="text" th:field="*{price}" id="price" th:value="${book.price}">
+            <label for="price" class="form-label">Price: </label>
+            <input type="text" class="form-control" th:field="*{price}" id="price">
+            <span class="text-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
         </div>
         <div class="col-6 mb-3">
-            <label class="form-label" for="category">Category:</label>
-            <select class="form-control" id="category" name="category.id">
+            <label for="category" class="form-label">Category:</label>
+            <select name="category.id" id="category" class="form-control">
                 <option value="">-- Select Category --</option>
-                <option th:each="category : ${categories}" th:value="${category.id}"
+                <option th:each="category : ${categories}" th:selected="${category.id==selected}"  th:value="${category.id}"
                         th:text="${category.name}"></option>
             </select>
         </div>
@@ -37,7 +37,6 @@
     <br>
     <a th:href="@{/books}">Back to List</a>
 </div>
-<th:block th:replace="~{layout :: footer}"></th:block>
+<th:block  th:replace="layout :: footer"></th:block>
 </body>
 </html>
-<!--nop bai-->
