--- a/src/main/resources/templates/book/list.html
+++ b/src/main/resources/templates/book/list.html
@@ -1,38 +1,64 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+        th:lang="en">
 <head>
     <meta charset="UTF-8">
     <title>My Book List</title>
-    <th:block th:replace="layout :: link-css"></th:block>
+    <th:block th:replace="~{layout :: link-css}"></th:block>
 </head>
 <body>
-<th:block th:replace="layout :: header"></th:block>
+<th:block th:replace="~{layout :: header}"></th:block>
 <div class="container">
     <h1 th:text="${title}"></h1>
     <table class="table">
+        <thead>
         <tr>
             <th>ID</th>
             <th>Title</th>
             <th>Author</th>
             <th>Price</th>
             <th>Category</th>
-            <th>Action</th>
+            <th sec:authorize="hasAnyAuthority('ADMIN')">Action</th>
         </tr>
+        </thead>
+        <tbody>
         <tr th:each="book : ${books}">
             <td th:text="${book.id}"></td>
             <td th:text="${book.title}"></td>
             <td th:text="${book.author}"></td>
             <td th:text="${book.price}"></td>
             <td th:text="${book.category.name}"></td>
-            <td>
-                <a th:href="@{/books/edit/{id}(id=${book.id})}">Edit</a>
-                <a th:href="@{/books/delete/{id}(id=${book.id})}"
-                   onclick="return confirm('Are you sure? Delete now.')">Delete</a>
+            <td sec:authorize="hasAnyAuthority('ADMIN')">
+                <a type="button" class="btn btn-success"
+                   th:href="@{/books/edit/{id}(id=${book.id})}">Edit</a>
+                <a type="button" class="btn btn-danger" th:href="@{/books/delete/{id}(id=${book.id})}"
+                   onclick="return confirm('Are you sure?')">Delete</a>
             </td>
-
         </tr>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
     </table>
 </div>
-<th:block  th:replace="layout :: footer"></th:block>
+<script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+<script th:inline="javascript">
+    function deleteBook(link){
+        if (confirm('Ban chac chu?')){
+            $.ajax({
+                url: $(link).attr('href'),
+                type: 'DELETE',
+                success: result => {
+                    if(!result.success){
+                        alert(result.message);
+                    } else {
+                        $(link).parent().parent().remove();
+                    }
+                }
+            });
+        }
+    }
+</script>
+<th:block th:replace="~{layout :: footer}"></th:block>
 </body>
 </html>
